--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
             docker build -t octomike/${CIRCLE_PROJECT_REPONAME,,} .
             mkdir -p ${HOME}/docker
             docker save "octomike/${CIRCLE_PROJECT_REPONAME,,}" > ~/docker/image.tar
+          no_output_timeout: 30m # MCR is a large download
       - persist_to_workspace:
           root: /home/circleci
           paths:
@@ -48,6 +49,12 @@ jobs:
               echo "${DOCKER_PASS}" | docker login --username "${DOCKER_USER}" --password-stdin
               docker tag octomike/${CIRCLE_PROJECT_REPONAME,,} octomike/${CIRCLE_PROJECT_REPONAME,,}:${CIRCLE_TAG}
               docker push octomike/${CIRCLE_PROJECT_REPONAME,,}:${CIRCLE_TAG}
+              # for tags like 9.7.5-core, share a major tag 9.7-core as well
+              MAJOR_TAG=$(echo "${CIRCLE_TAG}" | sed -rn 's#([[:digit:]]+).([[:digit:]]+).([[:digit:]]+)(.*)#\1.\2\4#p')
+              if [[ -n "${MAJOR_TAG}" ]] ; then
+                docker tag octomike/${CIRCLE_PROJECT_REPONAME,,} octomike/${CIRCLE_PROJECT_REPONAME,,}:${MAJOR_TAG}
+                docker push octomike/${CIRCLE_PROJECT_REPONAME,,}:${MAJOR_TAG}
+              fi
             fi
 workflows:
   version: 2
