circle: guess branch on CIRCLE_TAG build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,9 @@ jobs:
               docker tag octomike/${CIRCLE_PROJECT_REPONAME,,} octomike/${CIRCLE_PROJECT_REPONAME,,}:${CIRCLE_TAG}
               docker push octomike/${CIRCLE_PROJECT_REPONAME,,}:${CIRCLE_TAG}
               # also publish tag for the corresponding matlab release version, which is the name of the current branch
-              docker tag octomike/${CIRCLE_PROJECT_REPONAME,,} octomike/${CIRCLE_PROJECT_REPONAME,,}:${CIRCLE_BRANCH}
-              docker push octomike/${CIRCLE_PROJECT_REPONAME,,}:${CIRCLE_BRANCH}
+              BRANCH=$(git branch --contains tags/${CIRCLE_TAG})
+              docker tag octomike/${CIRCLE_PROJECT_REPONAME,,} octomike/${CIRCLE_PROJECT_REPONAME,,}:${BRANCH}
+              docker push octomike/${CIRCLE_PROJECT_REPONAME,,}:${BRANCH}
               # update major tag X.Y[-variant] to the latest in this branch
               MAJOR_TAG=$(echo "${CIRCLE_TAG}" | sed -rn 's#([[:digit:]]+).([[:digit:]]+).([[:digit:]]+)(.*)#\1.\2\4#p')
               if [[ -n "${MAJOR_TAG}" ]] ; then
