--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           command: |
             docker load -i /tmp/workspace/docker/image.tar
             # figure out a better test
-            docker run -ti --rm --read-only --entrypoint /bin/sh octomike/${CIRCLE_PROJECT_REPONAME,,} -c 'test -d $MCRPath/runtime/glnxa64'
+            docker run -ti --rm --read-only --entrypoint /bin/sh octomike/${CIRCLE_PROJECT_REPONAME,,} -c 'test -d ${MCR_HOME}/runtime/glnxa64'
   deploy:
     docker:
       - image: circleci/buildpack-deps:stretch
