--- a/Dockerfile-full.template
+++ b/Dockerfile-full.template
@@ -20,4 +20,4 @@ RUN mkdir /opt/mcr_install && \
 ENV MCR_VERSION %%MCR_VERSION%%
 ENV LD_LIBRARY_PATH /opt/mcr/${MCR_VERSION}/runtime/glnxa64:/opt/mcr/${MCR_VERSION}/bin/glnxa64:/opt/mcr/${MCR_VERSION}/sys/os/glnxa64:/opt/mcr/${MCR_VERSION}/sys/opengl/lib/glnxa64
 ENV MCR_INHIBIT_CTF_LOCK 1
-ENV MCRPath /opt/mcr/${MCR_VERSION}
+ENV MCR_HOME /opt/mcr/${MCR_VERSION}
