--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,18 +15,20 @@ jobs:
       - run:
           name: Build Docker image
           command: |
+            # persist guessed branch so we can use it in deploy/tag
+            # can't use CIRCLE_BRANCH, because we are running for tags only
+            BRANCH=$(git branch -r --contains tags/${CIRCLE_TAG} | cut -d"/" -f2)
+            echo -n ${BRANCH} > ~/branch
             git describe --tags --always > version
             docker build -t octomike/${CIRCLE_PROJECT_REPONAME,,} .
             mkdir -p ${HOME}/docker
             docker save "octomike/${CIRCLE_PROJECT_REPONAME,,}" > ~/docker/image.tar
-            # persist guessed branch so we can use it in deploy/tag
-            BRANCH=$(git branch --contains tags/${CIRCLE_TAG})
-            echo -n ${BRANCH} > ~/docker/branch
           no_output_timeout: 30m # MCR is a large download
       - persist_to_workspace:
           root: /home/circleci
           paths:
             - docker/image.tar
+            - branch
   test:
     machine:
       image: circleci/classic:latest
@@ -56,9 +58,9 @@ jobs:
               docker tag octomike/${CIRCLE_PROJECT_REPONAME,,} octomike/${CIRCLE_PROJECT_REPONAME,,}:${CIRCLE_TAG}
               docker push octomike/${CIRCLE_PROJECT_REPONAME,,}:${CIRCLE_TAG}
               # also publish tag for the corresponding matlab release version, which is the name of the current branch
+              BRANCH=$(cat /tmp/workspace/branch)
               docker tag octomike/${CIRCLE_PROJECT_REPONAME,,} octomike/${CIRCLE_PROJECT_REPONAME,,}:${BRANCH}
               docker push octomike/${CIRCLE_PROJECT_REPONAME,,}:${BRANCH}
-              BRANCH=$(cat /tmp/workspace/docker/branch)
               # update major tag X.Y[-variant] to the latest in this branch
               MAJOR_TAG=$(echo "${CIRCLE_TAG}" | sed -rn 's#([[:digit:]]+).([[:digit:]]+).([[:digit:]]+)(.*)#\1.\2\4#p')
               if [[ -n "${MAJOR_TAG}" ]] ; then
