--- a/Dockerfile-core.template
+++ b/Dockerfile-core.template
@@ -35,6 +35,12 @@ RUN mkdir /opt/mcr_install && \
     rm -rf /opt/mcr/*/bin/glnxa64/qtwebengine && \
     rm -rf /opt/mcr/*/bin/glnxa64/cef_resources
 
+# MCR does not provide libfontconfig and the bundled libfreetype is
+# incompatbile to the system version. This is a common issue and the easiest
+# fix is to hide/delete the bundle libfreetype and implicitly use the system
+# version.
+RUN rm -f /opt/mcr/*/bin/glnxa64/libfreetype.so*
+
 # Configure environment
 ENV MCR_VERSION %%MCR_VERSION%%
 ENV MCR_RELEASE %%MCR_RELEASE%%
