--- a/Dockerfile-full.template
+++ b/Dockerfile-full.template
@@ -17,6 +17,12 @@ RUN mkdir /opt/mcr_install && \
     /opt/mcr_install/install -destinationFolder /opt/mcr -agreeToLicense yes -mode silent && \
     rm -rf /opt/mcr_install /tmp/*
 
+# MCR does not provide libfontconfig and the bundled libfreetype is
+# incompatbile to the system version. This is a common issue and the easiest
+# fix is to hide/delete the bundle libfreetype and implicitly use the system
+# version.
+RUN rm -f /opt/mcr/*/bin/glnxa64/libfreetype.so*
+
 # Configure environment
 ENV MCR_VERSION %%MCR_VERSION%%
 ENV MCR_RELEASE %%MCR_RELEASE%%
